2002-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: lossyCString_c() fix in line with recent
	changes ... cope with case where internal coding is not same as
	external coding.
	lossyCString_u() fix encoding used.

2002-03-18  Adam Fedor  <fedor@gnu.org>

	* Tools/gdomap.c (gdomap_log): Write to stdout if prio=LOG_INFO.

2002-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Some boundary error fixes by Alexander Malmberg.
	Fixes to encoding table initialisation.
	* Source/NSString.m:Fix error in encoding type for initialising from
	data.  By Alexander Malmberg.
	* Source/GSString.m: Correct string length when transmuting an 8-bit
	string to a 16-bit string - by Alexander Malmberg.

2002-03-17  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/GSAttributedString.m 
	([GSMutableAttributedString -replaceCharactersInRange:withString:]): 
	Only keep attribute #0 when removing it would remove all attributes.
	(patch by Alexander Malmberg)

2002-03-16  Adam Fedor  <fedor@gnu.org>

	* configure.in: Also configure SSL.

2002-03-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/Unicode.h: Add more options for character
	encoding conversion routines.
	* Source/GSPrivate.h: Add a couple of private functions for character
	encoding management.
	* Source/GSString.m: Convert throughoput to use new functions for
	converting from one string encoding to another.  Make changes to
	handle setting of default C string encoding to be an encoding which
	is incompatible with internal e-bit string objects.
	* Source/NSString.m: ditto
	* Source/Unicode.m: new string encoding conversion functions extended
	with a few new options.  Also fixed some memory allocation bugs to
	cure memory leaks.

	Rewritten low level support for different character encodings ...
	should provide more efficient and maintainable conversion between
	encodings and permit use of wide character encodings and encodings